<resources>
    <string name="app_name">Readers</string>

    <!-- 하단바 메뉴-->
    <string name="menu1">Home</string>
    <string name="menu2">추천</string>
    <string name="menu3">마이페이지</string>
    <string name="menu4">설정</string>

    <!-- 권한 화면 -->
    <string name="permission_checking">권한 확인중</string>
    <string name="permission_setting_title">권한 설정</string>
    <string name="permission_setting_message">앱을 실행하기 위해서는 권한 설정을 해야 합니다!</string>
    <string name="permission_setting_restart">권한을 설정하고 다시 실행해 주세요!</string>
    <string name="setting">설정</string>
    <string name="cancel">취소</string>

    <!-- 시작 화면 -->
    <string name="index_message">한 곳에서 모아 읽자</string>
    <string name="simple_and_fun">Simple and Fun</string>

    <string name="submit">확인</string>
    <string name="network_not_working">네트워크에 연결되어 있지 않습니다.\n확인 후 다시 실행해 주세요.</string>

    <!-- 공통 -->
    <string name="skip_string">...</string>

    <!-- 프로필 -->
    <string name="profile_setting">프로필 설정</string>
    <string name="profile_name">이름</string>
    <string name="profile_gender">성별</string>
    <string name="profile_birth">생일</string>
    <string name="profile_phone">전화</string>

    <!-- 로그인 -->
    <string name="remember_info">로그인 정보 기억하기</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="welcome">이미 회원이신가요?\n로그인 해 주세요 :)</string>
    <string name="forgot_id">아이디 찾기</string>
    <string name="forgot_pw">비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="join_us">새로운 리더스가 되어주세요! </string>
    <string name="login_warning">아이디와 비밀번호를 모두 입력해주세요!</string>
    <string name="login_succeed">로그인 성공!</string>
    <string name="login_error">로그인 에러 발생</string>

    <!--회원가입-->
    <string name="nickname">닉네임</string>
    <string name="password_verification">비밀번호 확인</string>
    <string name="your_taste">당신의 취향을 3가지 이상 골라주세요</string>
    <string name="sign_up_done">반갑습니다.\n회원가입이 완료되었습니다.</string>
    <string name="different_pw">비밀번호가 다릅니다.</string>
    <string name="nickname_length_warning">닉네임을 1자 이상 입력해주세요.</string>
    <string name="id_length_warning">아이디를 6자 이상 입력해주세요.</string>
    <string name="pwd_length_warning">비밀번호를 6자 이상 입력해주세요.</string>
    <string name="nickname_warning">닉네임을 입력해주세요.</string>
    <string name="signin_error">회원가입 에러 발생</string>
    <string name="taste">취향</string>
    <string name="select_notice">3가지 이상 골라주세요.</string>

    <!-- 1. 홈화면 -->
    <string name="list_day">요일별</string>
    <string name="sentimental">감성</string>
    <string name="humor">개그</string>
    <string name="drama">드라마</string>
    <string name="love">로맨스</string>
    <string name="thriller">스릴러</string>
    <string name="story">스토리</string>
    <string name="sports">스포츠</string>
    <string name="historical">시대극</string>
    <string name="omnibus">옴니버스</string>
    <string name="action">액션</string>
    <string name="daily_life">일상</string>
    <string name="episode">에피소드</string>
    <string name="fantasy">판타지</string>

    <string name="list_genre">장르별</string>
    <string name="list_end">완결</string>
    <string name="platforms">연재처</string>
    <string name="search_message">작품명, 작가명, 작품 설명 검색</string>

    <string name="naver">네이버웹툰</string>
    <string name="daum">다음웹툰</string>
    <string name="lezhin">레진코믹스</string>
    <string name="mrblue">미스터블루</string>
    <string name="bufftoon">버프툰</string>
    <string name="bomtoon">봄툰</string>
    <string name="bbuding">뿌딩</string>
    <string name="kakaopage">카카오페이지</string>
    <string name="comica">코미카</string>
    <string name="comicgt">코믹지티</string>
    <string name="ktoon">케이툰</string>
    <string name="toptoon">탑툰</string>
    <string name="toomics">투믹스</string>
    <string name="foxtoon">폭스툰</string>
    <string name="peanutoon">피너툰</string>

    <string name="naver_colored"><![CDATA[<b><font color=#2db400>네이버웹툰</font></b>]]></string>
    <string name="daum_colored"><![CDATA[<b><font color=#5f8ffb>다음웹툰</font></b>]]></string>
    <string name="lezhin_colored"><![CDATA[<b><font color=#e50020>레진코믹스</font></b>]]></string>
    <string name="mrblue_colored"><![CDATA[<b><font color=#00bce4>미스터블루</font></b>]]></string>
    <string name="bufftoon_colored"><![CDATA[<b><font color=#00c6d9>버프툰</font></b>]]></string>
    <string name="bomtoon_colored"><![CDATA[<b><font color=#ff33ac>봄툰</font></b>]]></string>
    <string name="bbuding_colored"><![CDATA[<b><font color=#ffe85a>뿌딩</font></b>]]></string>
    <string name="kakaopage_colored"><![CDATA[<b><font color=#ffd200>카카오페이지</font></b>]]></string>
    <string name="comica_colored"><![CDATA[<b><font color=#8633ff>코미카</font></b>]]></string>
    <string name="comicgt_colored"><![CDATA[<b><font color=#ffde00>코믹지티</font></b>]]></string>
    <string name="ktoon_colored"><![CDATA[<b><font color=#facc30>케이툰</font></b>]]></string>
    <string name="toptoon_colored"><![CDATA[<b><font color=#dc1e25>탑툰</font></b>]]></string>
    <string name="toomics_colored"><![CDATA[<b><font color=#eb2a36>투믹스</font></b>]]></string>
    <string name="foxtoon_colored"><![CDATA[<b><font color=#f2921a>폭스툰</font></b>]]></string>
    <string name="peanutoon_colored"><![CDATA[<b><font color=#3dc1d3>피너툰</font></b>]]></string>

    <string name="server_error">서버 통신 에러 발생</string>

    <string name="detail_page_memo">메모(~140자)</string>
    <string name="memo_save_success">메모 저장 성공</string>
    <string name="memo_save_fail">메모 저장 실패</string>
    <string name="memo_delete_success">메모 삭제 성공</string>
    <string name="memo_delete_fail">메모 삭제 실패</string>
    <string name="hide">숨김</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>

    <string name="subs_success">구독 성공</string>
    <string name="subs_fail">구독에 실패했습니다.\n다시 시도해주세요.</string>

    <string name="unsubs_success">구독 해지 성공</string>
    <string name="unsubs_fail">구독 해지에 실패했습니다.\n다시 시도해주세요.</string>

    <string name="block_success">숨김 성공</string>
    <string name="block_fail">숨기기를 실패했습니다.\n다시 시도해주세요.</string>

    <string name="unblock_success">숨김 해제 성공</string>
    <string name="unblock_fail">숨김 해제에 실패했습니다.\n다시 시도해주세요.</string>

    <string name="subs_notice_msg">숨긴 작품은 구독할 수 없습니다.\n숨김을 해제하고 다시 시도해주세요.</string>
    <string name="block_notice_msg">구독 작품은 숨길 수 없습니다.\n구독을 해지하고 다시 시도해주세요.</string>

    <string name="addbookmark_success">책갈피 추가 성공</string>
    <string name="addbookmark_fail">책갈피 추가 실패</string>

    <string name="deletebookmark_success">책갈피 삭제 성공</string>
    <string name="deletebookmark_fail">책갈피 삭제 실패</string>

    <string name="search_result">검색 결과</string>

    <string name="search_title">작품명</string>
    <string name="search_author">작가명</string>
    <string name="search_desc">작품 설명</string>

    <string name="see_first_epi">첫화보기</string>


    <!-- 2. 추천페이지 -->
    <string name="recommendation_page_top">님의 취향 저격 웹툰!</string>
    <string name="no_data">데이터가 없습니다.</string>
    <string name="preferred_genre_stats">선호 장르 통계</string>
    <string name="rec_string0">장르 마니아</string>
    <string name="rec_string0_1">님!</string>
    <string name="rec_string1_0">님,</string>
    <string name="rec_string1">장르를 좋아하시는군요!</string>
    <string name="rec_string2">장르는 어떠세요?</string>

    <!-- 3. 마이페이지 -->
    <string name="sir">님</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="subscribe">구독</string>
    <string name="bookmark">책갈피</string>
    <string name="memo">메모</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="no_memo">현재 저장된 메모가 없습니다.</string>

    <string name="last_update">마지막 수정 날짜</string>
    <string name="title">제목</string>
    <string name="author">작가</string>

   <!-- 4. 설정 -->
    <string name="login_setting">통합 로그인 관리</string>
    <string name="logout_done">로그아웃 완료</string>
    <string name="no_automatic_logout">자동 로그아웃 미지원 사이트입니다.\n직접 로그아웃 해주세요.</string>
    <string name="hide_setting">숨김 작품 목록 관리</string>
    <string name="notice">공지사항</string>
    <string name="FAQ">문의</string>

    <string name="server_error_message">서버 통신 에러 발생</string>
    <string name="no_internet_connectivity">인터넷 연결이 없습니다.</string>
    <string name="how_to">이용방법</string>
    <string name="manage_login_notice">스위치 버튼을 켜면 각 연재처의 로그인 화면이 나옵니다.\n스위치 버튼을 끄면 자동으로 로그아웃이 됩니다.\n현재 버프툰, 카카오페이지, 코미카, 탑툰은 자동 로그아웃 기능을 제공하고 있지 않습니다. 직접 로그아웃 해주세요.\n스위치 버튼은 로그인 여부를 편리하게 확인하기 위함입니다. 실수로 로그인 버튼을 누르고 로그인을 하지 않았다면 스위치 버튼을 한 번 더 눌러서 꺼주세요.\n리더스 앱 로그아웃 시 버프툰, 카카오페이지, 코미카, 탑툰을 제외한 모든 연재처에서 자동으로 로그아웃이 됩니다.</string>

    <string name="cancel_hide">숨김 해제</string>

    <string name="change_pw">·비밀번호 변경하기</string>
    <string name="change_pw_btn">비밀번호 변경</string>
    <string name="change_nickname">·닉네임 변경하기</string>
    <string name="change_nickname_btn">닉네임 변경</string>

    <string name="current_pw">현재 비밀번호</string>
    <string name="new_pw">새 비밀번호</string>
    <string name="new_pw_ver">새 비밀번호 확인</string>
    <string name="new_nickname">새 닉네임</string>

    <string name="notice_input_current_pw">현재 비밀번호를 입력해주세요.</string>
    <string name="new_pw_length_warning">새 비밀번호를 6자 이상 입력해주세요.</string>
    <string name="not_new_pw">현재 비밀번호와 다른 비밀번호로 설정해주세요.</string>
    <string name="wrong_pw">현재 비밀번호가 알맞지 않습니다.</string>
    <string name="pw_no_match">새 비밀번호가 다릅니다.</string>
    <string name="change_pw_success">비밀번호가 변경되었습니다.</string>
    <string name="change_pw_fail">비밀번호 변경에 실패했습니다.</string>
    <string name="change_nickname_success">닉네임이 변경되었습니다.</string>
    <string name="change_nickname_fail">닉네임 변경에 실패했습니다.</string>

   <!-- 정렬 -->
    <string name="sort_new">최신순</string>
    <string name="sort_old">오래된순</string>
    <string name="sort_update">업데이트순</string>
    <string name="sort_title">제목순</string>
    <string name="sort_platform">연재처순</string>

    <string name="hide_toons">작품 숨김</string>


    <!-- 작품 상세 페이지 -->
    <string name="detail_page_description">작품 설명</string>
    <string name="null_body">body값이 null입니다.</string>

    <string name="update">업데이트 날짜</string>

</resources>
