<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_index"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/app_name"
        app:srcCompat="@drawable/readers_logo_bg"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/index_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:gravity="center"
        android:text="@string/index_message"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/colorWhite"
        android:text="@string/network_not_working"
        android:gravity="center"
        android:visibility="gone"
        android:layout_margin="8dp"
        android:layout_above="@+id/close"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/submit"
        android:id="@+id/close"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>